hard-gists/7304099/run.log
=== Docker Run Log for 7304099 ===
Started at: Mi 29. Okt 17:05:06 CET 2025

[2025-10-29 17:05:06] START: Running container for 7304099
[2025-10-29 17:05:07] SUCCESS: Container ad7c95930dd71db04837bff73e6e92b21fe81017f6e998b6f7aaf868d3fea888 started for 7304099
=== Container logs for 7304099 ===
  File "/snippet.py", line 58
    print error / error_first
    ^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 7304099 ===
[2025-10-29 17:05:09] INFO: Container ad7c95930dd71db04837bff73e6e92b21fe81017f6e998b6f7aaf868d3fea888 has stopped
